--- a/views/partials/Bio.jade
+++ b/views/partials/Bio.jade
@@ -1,3 +1,16 @@
+ul.menu
+    li
+        a.menubutton.bottomshadow.active(href='Bio') Bio
+    li
+        a.menubutton.bottomshadow(href='Projects') Projects
+    li
+        a.menubutton.bottomshadow(href='Blog') Blog
+    li
+        a.menubutton.bottomshadow(href='Resume') Resume
+    li
+        a.menubutton.bottomshadow(href='Sandbox') Sandbox
+.divider
+
 .row-fluid
 
     .span7.offset1
@@ -33,8 +46,3 @@
     //    #twitter
     //        |<a class="twitter-timeline" href="https://twitter.com/mattlovan" data-widget-id="331209679692763139">Tweets by @mattlovan</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-
-.row-fluid
-    .span12
-        .divider
-    p.pull-right 2013
