--- a/views/partials/Bio.jade
+++ b/views/partials/Bio.jade
@@ -23,9 +23,7 @@ ul.menu
                 |I consider myself more of a developer than a designer, and so I'll try
                 |to keep the design simple and clean. I was relieved to discover&nbsp;
                 a(href='http://twitter.github.io/bootstrap/index.html') bootstrap
-                |&nbsp;and I intend to lean on it pretty hard.
-                |A lack of design can be mistaken for good design, but adding in
-                |clutter and color will give me away.
+                |&nbsp;and I intend to rely on it heavily.
 
             blockquote.pull-right
                 p Better to remain silent and be thought a fool than to speak and to remove all doubt.
@@ -34,8 +32,7 @@ ul.menu
             p
                 |I've started with the&nbsp;
                 a(href='https://github.com/btford/angular-express-seed.git') node-angular-seed
-                |&nbsp;by Brian Ford. It's a great place to start if you, like me, have very little experience in node,
-                |express, angular, javascript, html and web development in general. This site is hosted at Heroku.
+                |&nbsp;by Brian Ford. It's a great place to start if you, like me, are just getting started with node.js and angular.js. This site is hosted at Heroku.
 
 
     .span3
