--- a/views/partials/Bio.jade
+++ b/views/partials/Bio.jade
@@ -9,14 +9,15 @@
             p
                 |I've started with the&nbsp;
                 a(href='https://github.com/btford/angular-express-seed.git') node-angular-seed
-                |&nbsp;by Brian Ford. It's a great place to start if you, like me, are just getting started with node.js and angular.js. This site is hosted at Heroku.
+                |&nbsp;by Brian Ford. It's a great place to start if you are just getting started with Node and Angular.
 
+            p
+                |This site is hosted at Heroku. That in itself represented a big accomplishment for me. Heroku requires you to use the version control system&nbsp;
 
+                a(href='https://github.com/btford/angular-express-seed.git') Git
+
+                |. It allows you to maintain a chain of versions of a piece of code, track the changes, and move back and forth between the different versions.
+                | Powerful stuff, but not super-intuitive.
     .span3
         .picture.bottomshadow
             img(src='/img/ProfilePicBW.jpg')
-
-    //.span3
-    //    #twitter
-    //        |<a class="twitter-timeline" href="https://twitter.com/mattlovan" data-widget-id="331209679692763139">Tweets by @mattlovan</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
