--- a/views/partials/Bio.jade
+++ b/views/partials/Bio.jade
@@ -14,10 +14,15 @@
             p
                 |This site is hosted at Heroku. That in itself represented a big accomplishment for me. Heroku requires you to use the version control system&nbsp;
 
-                a(href='https://github.com/btford/angular-express-seed.git') Git
+                a(href='http://en.wikipedia.org/wiki/Git_(software)') Git
 
-                |. It allows you to maintain a chain of versions of a piece of code, track the changes, and move back and forth between the different versions.
-                | Powerful stuff, but not super-intuitive.
+                | . Git allows you to maintain a chain of versions of a piece of code, track the changes, merge, branch,
+                | move back and forth between different versions, and more. Powerful stuff, but not super-intuitive.
+
+            p
+                |I hope to use this site to share what I've learned along the way - I'll be adding a blog in the near future. Also in the works -
+                | live editing of my resume, MongoDB backend, and more. Stay tuned : )
+
     .span3
         .picture.bottomshadow
             img(src='/img/ProfilePicBW.jpg')
