Updated bio - removed resign

--- a/views/partials/Bio.jade
+++ b/views/partials/Bio.jade
@@ -3,8 +3,7 @@
     .span7.offset1
         .well
             p
-                |This is my personal website and portfolio. I've recently resigned as a corporate consultant to persue a more creative
-                |career path. I'll hope to develop and improve this site continually over the next several months.
+                |This is my personal website and portfolio. I hope to develop and improve this site continually over the next several months.
 
             p
                 |I've started with the&nbsp;
