--- a/views/partials/Bio.jade
+++ b/views/partials/Bio.jade
@@ -7,7 +7,7 @@
 
             p
                 |I've started with the&nbsp;
-                a(href='https://github.com/btford/angular-express-seed.git') node-angular-seed
+                a(href='https://github.com/btford/angular-express-seed') node-angular-seed
                 |&nbsp;by Brian Ford. It's a great place to start if you are just getting started with Node and Angular.
 
             p
