--- a/views/partials/Bio.jade
+++ b/views/partials/Bio.jade
@@ -1,27 +1,30 @@
-.row-fluid
 
-    .span7.offset1
-        .well
-            p
-                |This is my personal website and portfolio. I hope to develop and improve this site continually over the next several months.
 
-            p
-                |I've started with the&nbsp;
-                a(href='https://github.com/btford/angular-express-seed') node-angular-seed
-                |&nbsp;by Brian Ford. It's a great place to start if you are just getting started with Node and Angular.
 
-            p
-                |This site is hosted at Heroku. That in itself represented a big accomplishment for me. Heroku requires you to use the version control system&nbsp;
 
-                a(href='http://en.wikipedia.org/wiki/Git_(software)') Git
+//div(ng-repeat="item in Credits")
 
-                | . Git allows you to maintain a chain of versions of a piece of code, track the changes, merge, branch,
-                | move back and forth between different versions, and more. Powerful stuff, but not super-intuitive.
+h3 MVC
+.row-fluid.well
+    .span2
+        img(src='/img/angular-logo.jpeg', target="_blank" , alt="node logo", width="100em")
+    .span10
+        h5 "AngularJS is what HTML would have been, had it been designed for building web-apps. Declarative templates with data-binding, MVW, MVVM, MVC, dependency injection and great testability story all implemented with pure client-side JavaScript!"
+        a(href="http://angularjs.org/", target="_blank") Angular.js
 
-            p
-                |I hope to use this site to share what I've learned along the way - I'll be adding a blog in the near future. Also in the works -
-                | live editing of my resume, MongoDB backend, and more. Stay tuned : )
 
-    .span3
-        .picture.bottomshadow
-            img(src='/img/ProfilePicBW.jpg')
+h3 Server
+.row-fluid.well
+    .span2
+        img(src='/img/node_logo.jpg', target="_blank" , alt="node logo", width="100em")
+    .span10
+        h5 "Node.js is a platform built on Chrome's JavaScript runtime for easily building fast, scalable network applications. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient, perfect for data-intensive real-time applications that run across distributed devices."
+        a(href="http://nodejs.org/", target="_blank") Node.js
+
+h3 Hosting
+.row-fluid.well
+    .span2
+        img(src='/img/heroku_logo.png', target="_blank" , alt="heroku logo", width="100px")
+    .span10
+        h5 "Heroku is a polyglot cloud application platform. With Heroku, you don’t need to think about servers at all. You can write apps in the programming language of your choice, back it with add-on resources such as SQL and NoSQL databases, Memcached, and many others. You manage your app using the Heroku command-line tool and you deploy code using the Git revision control system, all running on the Heroku infrastructure."
+        a(href="https://www.heroku.com/", target="_blank") Heroku
