update heroku path

--- a/views/partials/Bio.jade
+++ b/views/partials/Bio.jade
@@ -24,7 +24,7 @@ h3 Server
 h3 Hosting
 .row-fluid.well
     .span2
-        img(src='/img/heroku_logo.png', target="_blank" , alt="heroku logo", width="100px")
+        img(src='/img/heroku_logo.PNG', target="_blank" , alt="heroku logo", width="100px")
     .span10
         h5 "Heroku is a polyglot cloud application platform. With Heroku, you don’t need to think about servers at all. You can write apps in the programming language of your choice, back it with add-on resources such as SQL and NoSQL databases, Memcached, and many others. You manage your app using the Heroku command-line tool and you deploy code using the Git revision control system, all running on the Heroku infrastructure."
         a(href="https://www.heroku.com/", target="_blank") Heroku
